# libstarmathpp

./: CMakeLists.txt  README.md  TODO  action_8hpp.html  action_8hpp_source.html  actions_2write_8hpp.html  actions_2write_8hpp_source.html  add_8hpp.html  add_8hpp_source.html  algorithm_8hpp.html  algorithm_8hpp_source.html  all_8hpp.html  all_8hpp_source.html  annotated.html  arithmetic__function__template_8hpp.html  arithmetic__function__template_8hpp_source.html  average_8hpp.html  average_8hpp_source.html  bad__pixel__median__interpolator_8hpp.html  bad__pixel__median__interpolator_8hpp_source.html  center__of__gravity__centroider_8hpp.html  center__of__gravity__centroider_8hpp_source.html  center__on__star_8hpp.html  center__on__star_8hpp_source.html  centroider_8hpp.html  centroider_8hpp_source.html  cimg__fits__io_8hpp.html  cimg__fits__io_8hpp_source.html  classes.html  classstarmathpp_1_1_base_exception-members.html  classstarmathpp_1_1_base_exception.html  classstarmathpp_1_1_histogram-members.html  classstarmathpp_1_1_histogram.html  classstarmathpp_1_1_point-members.html  classstarmathpp_1_1_point.html  classstarmathpp_1_1_rect-members.html  classstarmathpp_1_1_rect.html  classstarmathpp_1_1_size-members.html  classstarmathpp_1_1_size.html  classstarmathpp_1_1algorithm_1_1_bad_pixel_median_interpolator-members.html  (+244 more)
.github/workflows/: cmake-fedora.yml  cmake.yml  doc.yml
cmake/: AddUnitTest.cmake  FindCeres.cmake  FindCimg.cmake  FindGlog.cmake
doc/: CMakeLists.txt
doc/api-doc/: doxyfile.in
doc/images/image_development/: image_development_data_flow.odp  star_recognizer_data_flow.odp
doc/images/star_recognizer/: star_recognizer_data_flow.odp
libstarmathpp/: CMakeLists.txt  action.hpp  algorithm.hpp  all.hpp  enum_helper.hpp  exception.hpp  floating_point_equality.hpp  histogram.hpp  histogram.test.cpp  image.hpp  inconsistent_image_dimensions_exception.hpp  io.hpp  point.cpp  point.hpp  point.test.cpp  rect.cpp  rect.hpp  rect.test.cpp  size.hpp  size.test.cpp  version.hpp.in  view.hpp
libstarmathpp/actions/: write.hpp
libstarmathpp/algorithm/: average.hpp  average.test.cpp  bad_pixel_median_interpolator.hpp  bad_pixel_median_interpolator.test.cpp  fwhm.hpp  fwhm.test.cpp  hfd.hpp  hfd.test.cpp  math_functions.hpp  math_functions.test.cpp  snr.hpp  snr.test.cpp  star_cluster_algorithm.cpp  star_cluster_algorithm.hpp  star_cluster_algorithm.test.cpp
libstarmathpp/algorithm/centroid/: center_of_gravity_centroider.hpp  center_of_gravity_centroider.test.cpp  centroider.hpp  intensity_weighted_centroider.hpp  intensity_weighted_centroider.test.cpp
libstarmathpp/algorithm/stretch/: midtone_balance_stretcher.hpp  midtone_balance_stretcher.test.cpp  stretcher.hpp
libstarmathpp/algorithm/threshold/: max_entropy_thresholder.hpp  max_entropy_thresholder.test.cpp  mean_thresholder.hpp  mean_thresholder.test.cpp  otsu_thresholder.hpp  otsu_thresholder.test.cpp  thresholder.hpp
libstarmathpp/io/: cimg_fits_io.cpp  cimg_fits_io.hpp  filesystem_wrapper.hpp  image_reader.cpp  image_reader.hpp  image_reader.test.cpp  image_writer.cpp  image_writer.hpp  image_writer.test.cpp
libstarmathpp/pipeline/views/: add.hpp  add.test.cpp  arithmetic_function_template.hpp  center_on_star.hpp  center_on_star.test.cpp  crop.hpp  crop.test.cpp  detect_stars.hpp  detect_stars.test.cpp  divide_by.hpp  divide_by.test.cpp  files.hpp  files.test.cpp  interpolate_bad_pixels.hpp  interpolate_bad_pixels.test.cpp  multiply_by.hpp  multiply_by.test.cpp  read.hpp  read.test.cpp  scale.test.cpp  stretch.hpp  stretch.test.cpp  subtract.hpp  subtract.test.cpp  subtract_background.hpp  subtract_background.test.cpp  write.hpp  write.test.cpp
libstarmathpp/views/: add.hpp  add.test.cpp  arithmetic_function_template.hpp  center_on_star.hpp  center_on_star.test.cpp  crop.hpp  crop.test.cpp  detect_stars.hpp  detect_stars.test.cpp  divide_by.hpp  divide_by.test.cpp  files.hpp  files.test.cpp  interpolate_bad_pixels.hpp  interpolate_bad_pixels.test.cpp  multiply_by.hpp  multiply_by.test.cpp  read.hpp  read.test.cpp  scale.hpp  scale.test.cpp  stretch.hpp  stretch.test.cpp  subtract.hpp  subtract.test.cpp  subtract_background.hpp  subtract_background.test.cpp  write.hpp  write.test.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  (+53 more)
test_data/integration/image_development/: expected_result.tiff
test_data/pipeline/detect_stars/: test_five_stars.tiff  test_two_stars.tiff
tests/: CMakeLists.txt  astrophotography_image_development_test.cpp  image_development.test.cpp  image_development_test.cpp  star_metrics.test.cpp  star_metrics_test.cpp  star_recognizer.test.cpp
